[package]
name = "particles"
version = "0.1.0"
authors = ["wjviant <wjviant@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
rand = "0.9.0"
scoped_threadpool = "0.1.9"
